--- a/static/css/output.css
+++ b/static/css/output.css
@@ -2401,6 +2401,10 @@ html {
   font-weight: 100;
 }
 
+.font-normal {
+  font-weight: 400;
+}
+
 .text-blue-500 {
   --tw-text-opacity: 1;
   color: rgb(59 130 246 / var(--tw-text-opacity));
